# currently-api

./: .docker-env  .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  requirements.txt
.github/workflows/: doc-gen.yml  static.yml
api/: Cargo.toml  test-data.json
api/api/: settings.py  urls.py
api/main/: models.py  schema.py
api/main/migrations/: 0001_initial.py
api/src/: db.rs
api/src/graphql/mutation/: note.rs
api/src/graphql/query/: note.rs
certs/: dev.cert  dev.key
django/: Dockerfile
docs/: dbembed.html  requirements.txt
docs/source/: conf.py  index.rst
entity/: Cargo.toml
migration/: Cargo.toml
migrations/: 3_organization.sql  4_master_module.sql  5_slave_module.sql
service/: Cargo.toml
service/tests/: mock.rs
src/: ctx.rs  error.rs  log.rs  main.rs  model.rs
src/db/: mod.rs
src/web/: mw_auth.rs  routes_login.rs  routes_tickets.rs
