[package]
name = "graphql-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
graphql-service = { path = "../service" }
tokio = { version = "1.0", features = ["full"] }
axum = "0.6.18"
dotenvy = "0.15.0"
async-graphql-axum = "5.0.9"
entity = { path = "../entity" }
migration = { path = "../migration" }
